# stelekit

./: .actionlint.yaml  .backlog-context.md  .bazelrc  .bazelrc.user.example  .gitignore  .release-please-manifest.json  .zizmor.yml  AGENTS.md  ARCHITECTURE_REVIEW.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  GRAPH_DATABASE_ALTERNATIVES.md  LICENSE  MODULE.bazel  Makefile  PERFORMANCE_ANALYSIS.md  PRODUCTION_SETUP_README.md  QUERY_ANALYSIS.md  README.md  TODO.md  build.gradle.kts  compilation_output.txt  dev.sh  final_compile_result.txt  gradle.properties  init.gradle  refactor.patch  rewrite.py  rules_jvm_external++maven+maven_install.json  run-android.sh  run-logseq.sh  settings.gradle.kts  test_output.txt
androidApp/: BUILD.bazel  BazelAndroidManifest.xml  build.gradle.kts
androidApp/proguard/: benchmark-rules.proguard
androidApp/src/androidTest/kotlin/dev/stapler/stelekit/: ImageMeterAndroidTest.kt  PerfExportAndroidTest.kt  PhotoInsertAndroidTest.kt  SmokeTest.kt
androidApp/src/benchmark/: AndroidManifest.xml
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/kotlin/dev/stapler/stelekit/: CaptureActivity.kt  CaptureViewModel.kt  MainActivity.kt  SteleKitApplication.kt  VoiceCaptureActivity.kt  VoiceCaptureWidgetViewModel.kt
androidApp/src/main/kotlin/dev/stapler/stelekit/auto/: AudiobookAutoSettings.kt  AudiobookNote.kt  AudiobookNoteFormatter.kt  AudiobookNoteScreen.kt  AudiobookNoteWriter.kt  AudiobookNotesSettings.kt  BookInfo.kt  MediaSessionObserver.kt  NoOpJournalService.kt  NoteWriter.kt  ObservedSession.kt  QuickTagScreen.kt  SteleKitCarAppService.kt  SteleKitNotificationListenerService.kt  SteleKitSession.kt
androidApp/src/main/kotlin/dev/stapler/stelekit/tile/: CaptureTileService.kt
androidApp/src/main/kotlin/dev/stapler/stelekit/voice/: CarAudioRecorder.kt
androidApp/src/main/kotlin/dev/stapler/stelekit/widget/: CaptureWidget.kt  (+3 more)
androidApp/src/main/res/drawable/: ic_launcher_background.xml  ic_mic.xml  ic_tile_capture.xml
androidApp/src/main/res/layout/: widget_initial_layout.xml
androidApp/src/main/res/values/: strings.xml  themes.xml
androidApp/src/main/res/xml/: capture_widget_info.xml  file_provider_paths.xml  voice_widget_info.xml
androidApp/src/test/kotlin/dev/stapler/stelekit/: CaptureShareTextTest.kt
buildSrc/: BUILD.bazel  build.gradle.kts
buildSrc/src/main/kotlin/dev/stapler/detekt/: ActorWriteInLoopRule.kt  ClassLevelDirectRepositoryWriteOptInRule.kt  InMemoryPaginationRule.kt  IndexWithoutAnalyzeRule.kt  JvmOnlyApiInCommonMainRule.kt  MissingDirectRepositoryWriteRule.kt  MissingHelpPageAnnotationRule.kt  MustUseTypedLazyItemsRule.kt  NoRunBlockingInLifecycleRule.kt  RegexInLambdaRule.kt  RememberKeyForConstructorArgsRule.kt  RepositoryWriteCallSiteRule.kt  SaveBlockWithCopyRule.kt  SteleKitRuleSetProvider.kt  SwallowedCancellationExceptionRule.kt  UnthemedTextInBackgroundContainerRule.kt
buildSrc/src/test/kotlin/dev/stapler/detekt/: ActorWriteInLoopRuleTest.kt  ClassLevelDirectRepositoryWriteOptInRuleTest.kt  InMemoryPaginationRuleTest.kt  IndexWithoutAnalyzeRuleTest.kt  JvmOnlyApiInCommonMainRuleTest.kt  MissingDirectRepositoryWriteRuleTest.kt  MissingHelpPageAnnotationRuleTest.kt  MustUseTypedLazyItemsRuleTest.kt  NoRunBlockingInLifecycleRuleTest.kt  RegexInLambdaRuleTest.kt  RememberKeyForConstructorArgsRuleTest.kt  RepositoryWriteCallSiteRuleTest.kt  SwallowedCancellationExceptionRuleTest.kt  UnthemedTextInBackgroundContainerRuleTest.kt
fdroid/: config.yml  pyproject.toml  scan_apks.py
fdroid/metadata/: dev.stapler.stelekit.yml
kmp/: BUILD.bazel  README.md  TESTING_README.md  ast_debug.txt  build.gradle.kts  gradle.properties  js-README.md  record_android_screenshots.sh  record_jvm_screenshots.sh  smoke_tests.sh  webpack.config.js
kmp/config/detekt/: baseline.xml  detekt.yml
kmp/docs/: PHASE2_INTEGRATION_GUIDE.md  PHASE2_INTEGRATION_SUMMARY.md
kmp/src/androidInstrumentedTest/kotlin/dev/stapler/stelekit/: AppSmokeTest.kt
kmp/src/androidMain/: AndroidManifest.xml
kmp/src/androidMain/kotlin/: BUILD.bazel
kmp/src/androidMain/res/values/: strings.xml
kmp/src/androidMain/res/xml/: bench_file_paths.xml
kmp/src/androidUnitTest/kotlin/: BUILD.bazel
kmp/src/androidUnitTest/kotlin/dev/stapler/stelekit/: AllAndroidUnitTests.kt
kmp/src/businessTest/kotlin/: BUILD.bazel
kmp/src/businessTest/kotlin/dev/stapler/stelekit/: AllBusinessTests.kt
kmp/src/commonMain/kotlin/: BUILD.bazel
kmp/src/commonMain/resources/: BUILD.bazel
kmp/src/commonMain/resources/demo-graph/: welcome-journal.md
kmp/src/commonMain/resources/demo-graph/journals/: 2026_04_08.md  2026_04_09.md  2026_04_10.md  2026_04_11.md  2026_04_12.md  2026_06_19.md
kmp/src/commonMain/resources/demo-graph/pages/: About SteleKit.md  All Pages.md  Backlinks.md  Block Editing.md  Block Editor Reference.md  Daily Notes.md  Flashcards.md  Images.md  Keyboard Shortcuts.md  Markdown Formatting.md  Page Linking.md  Properties.md  Search.md  Start Here.md  Tables.md  Tags & Highlight.md  Tasks.md  Unlinked References.md
kmp/src/commonTest/kotlin/: BUILD.bazel
kmp/src/commonTest/kotlin/dev/stapler/stelekit/: AppViewModelTest.kt.bak
kmp/src/commonTest/resources/bcur-vectors/: README.md
kmp/src/jsMain/resources/: index.html
kmp/src/jvmCommonMain/kotlin/: BUILD.bazel
kmp/src/jvmMain/kotlin/: BUILD.bazel
kmp/src/jvmMain/resources/icons/: BUILD.bazel
kmp/src/jvmTest/kotlin/: BUILD.bazel
kmp/src/jvmTest/kotlin/dev/stapler/stelekit/: AllJvmTests.kt  DatabaseIntegrationTest.kt
kmp/src/jvmTest/resources/screenshot-test-graph/journals/: 2026_01_15.md
kmp/src/jvmTest/resources/screenshot-test-graph/pages/: Linked Page.md  Properties Example.md  Welcome.md
kmp/src/nativeInterop/cinterop/: FoundationModelsShim.def  PingShim.def
kmp/src/wasmJsMain/resources/: index.html  looks-like-app-shell.js  looks-like-app-shell.test.js  manifest.webmanifest  sqlite-stelekit-worker.js  stelekit-service-worker.js
kmp/webpack.config.d/: sqljs-config.js
native/libsql/: .inputs-hash  BUILD.bazel  Cargo.toml
native/libsql/src/: lib.rs
(+3025 files in other folders)
