# Run `cargo generate-lockfile` in this directory after changing dependency versions.
# The Cargo.lock file is required by Bazel's crate_universe for deterministic builds.

[package]
name = "stelekit-libsql-jni"
version = "0.1.0"
edition = "2021"

[lib]
name = "stelekit_libsql"
crate-type = ["cdylib"]

[dev-dependencies]
tempfile = "3"

[dependencies]
# JNI glue — features = ["invocation"] required for catch_unwind compatibility
jni = { version = "0.21", default-features = false, features = ["invocation"] }
# libsql local embedded mode (no Turso cloud sync).
# "core" gives the local file driver; leaving remote/replication/encryption features off
# keeps the binary small and avoids pulling in reqwest/rustls/etc.
libsql = { version = "0.9", default-features = false, features = ["core"] }
# Tokio runtime required to drive libsql's async API from synchronous JNI call sites.
# "rt-multi-thread" allows blocking JNI threads without starving the libsql I/O worker.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[profile.release]
opt-level = "z"   # size-optimise; libsql's bundled SQLite already does the heavy lifting
strip = true
lto = true
panic = "unwind"  # required for catch_unwind to work correctly in JNI callbacks
